	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1208)
 * bugfix: on certain framebuffer configurations part of the screen would not be redrawn.
# (r1206,r1207)
 * configure --with-tmpfile will specify a new temporary directory. 
# (r1204)
 * bugfix: conversion from external program was vulnerable to failure due to missing check.
# (r1202,r1205)
 * if an image has been decoded from a temporary file, its name is in i:_buffered_in_tmpfile.
# (r1200)
 * will consider magic number "<svg" enough to classify a file as SVG.
 * load SVG by invoking inkscape <file.svg> --without-gui --export-png <temp.png>.
# (r1197)
 * if scrollable border less than 1/16 of screen, 'scrollforward' will skip it.
# (r1196)
 * In case of CBZ,CBR,PDF,PS,DVI file, fimgs will use '--autotop --autowidth'.
# (r1184)
 * will resize huge images not to exceed too much screen size.
   (TODO: will introduce control option for this soon)
# (r1181)
 * fix: gif error handling could have led to NULL pointer usage.
# (r1156)
 * scale '<'/scale '>' will shrink/magnify the image using cached mipmaps.
# (r1155)
 * fix: the largest mipmap was not always being used.
# (r1153,1154,1195)
 * fimgs script will probe for unrar-nonfree/rar/unrar-free (in this order).
 * fimgs man page updated.
# (r1149)
 * Added a '_caption_over_image_fmt' variable to customize overlay string contents.
# (r1147,r1148)
 * Added a 'goto {+|-}identifier[+]' syntax to jump to next file having a different value of i:identifier, 
   also empty if without trailing `+'.
# (r1145)
 * configure will try to detect curses/ncurses.
# (r1144)
 * fix: -lfl linkage is not really necessary: removed it.
# (r1143)
 * fix: support for PPM files with 2 bytes per sample.
# (r1136)
 * limit '-set_union' will merge current limited list with the new one.
# (r1135)
 * limit '-merge' will merge current limited list with the new one.
# (r1133,r1134)