@@ -167,7 +167,7 @@
 #define FIM_WANT_PROGRESS_RECURSIVE_LOADING 0 /* print a line when loading recursively directories in background */
 #define FIM_WANT_RESIZE_HUGE_AFTER_LOAD 1 /* resize huge images at load time */
 #define FIM_IMG_NAKED_PTRS (!FIM_USE_CXX11) /* in C++11, prefer smart pointers for Image* */
-#define FIM_EXPERIMENTAL_FONT_CMD FIM_USE_CXX11 && 0
+#define FIM_EXPERIMENTAL_FONT_CMD 1 && defined(HAVE_DIRENT_H) && 1 /*  */
 #if FIM_USE_CXX11
 #define FIM_NOEXCEPT noexcept
 #define FIM_CONSTEXPR constexpr
@@ -868,6 +868,7 @@ namespace fim
 #define FIM_FLT_EXEC			"exec" /* not in vim */
 #define FIM_FLT_EVAL			"eval" /* not in vim */
 #define FIM_FLT_FILE			"file" /* in vim */
+#define FIM_FLT_FONT			"font" /* not in vim */
 #define FIM_FLT_GETENV			"getenv" /* not in vim */
 #define FIM_FLT_GOTO			"goto" /* in vim */
 #define FIM_FLT_HELP			"help" /* in vim */
